--- a/realworld/src/main/resources/templates/pages/auth/login.html
+++ b/realworld/src/main/resources/templates/pages/auth/login.html
@@ -7,7 +7,7 @@
             <div class="col-md-6 offset-md-3 col-xs-12">
                 <h1 class="text-xs-center">Sign up</h1>
                 <p class="text-xs-center">
-                    <a href="">Need an account?</a>
+                    <a href="register.html" th:href="@{/register}">Need an account?</a>
                 </p>
                 <form>
                     <fieldset class="form-group">
