--- a/realworld/src/main/resources/templates/pages/auth/register.html
+++ b/realworld/src/main/resources/templates/pages/auth/register.html
@@ -1,34 +1,34 @@
-<html lang="ja" xmlns:th="http://thymeleaf.org"
-      th:replace="~{fragments/layout :: layout(~{::body})}">
+<html lang="ja" th:replace="~{fragments/layout :: layout(~{::body})}"
+      xmlns:th="http://thymeleaf.org">
 <body>
 <div class="auth-page">
-  <div class="container page">
-    <div class="row">
-      <div class="col-md-6 offset-md-3 col-xs-12">
-        <h1 class="text-xs-center">Sign up</h1>
-        <p class="text-xs-center">
-          <a href="">Have an account?</a>
-        </p>
+    <div class="container page">
+        <div class="row">
+            <div class="col-md-6 offset-md-3 col-xs-12">
+                <h1 class="text-xs-center">Sign up</h1>
+                <p class="text-xs-center">
+                    <a href="login.html" th:href="@{login}">Have an account?</a>
+                </p>
 
-        <ul class="error-messages">
-          <li>That email is already taken</li>
-        </ul>
+                <ul class="error-messages">
+                    <li>That email is already taken</li>
+                </ul>
 
-        <form>
-          <fieldset class="form-group">
-            <input class="form-control form-control-lg" type="text" placeholder="Your Name" />
-          </fieldset>
-          <fieldset class="form-group">
-            <input class="form-control form-control-lg" type="text" placeholder="Email" />
-          </fieldset>
-          <fieldset class="form-group">
-            <input class="form-control form-control-lg" type="password" placeholder="Password" />
-          </fieldset>
-          <button class="btn btn-lg btn-primary pull-xs-right">Sign up</button>
-        </form>
-      </div>
+                <form>
+                    <fieldset class="form-group">
+                        <input class="form-control form-control-lg" placeholder="Your Name" type="text"/>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <input class="form-control form-control-lg" placeholder="Email" type="text"/>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <input class="form-control form-control-lg" placeholder="Password" type="password"/>
+                    </fieldset>
+                    <button class="btn btn-lg btn-primary pull-xs-right">Sign up</button>
+                </form>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 </body>
 </html>
