新規投稿ページへの遷移リンク変更

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
         <a class="nav-link active" href="/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/editor"> <i class="ion-compose"></i>&nbsp;New Article </a>
+        <a class="nav-link" href=" /articles/new"> <i class="ion-compose"></i>&nbsp;New Article </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/settings"> <i class="ion-gear-a"></i>&nbsp;Settings </a>
