新規投稿リンクをlink_toに変更

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,9 @@
         <a class="nav-link active" href="/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href=" /articles/new"> <i class="ion-compose"></i>&nbsp;New Article </a>
+        <%= link_to new_article_path, class: 'nav-link' do %>
+          <i class="ion-compose"></i> New Article
+          <% end %>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/settings"> <i class="ion-gear-a"></i>&nbsp;Settings </a>
