articleテーブルに値が保存される

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -6,32 +6,29 @@
           <li>That title is required</li>
         </ul>
 
-        <form>
+        <%= form_with model: @article, local: true do |form| %>
           <fieldset>
-            <fieldset class="form-group">
-              <input type="text" class="form-control form-control-lg" placeholder="Article Title" />
-            </fieldset>
-            <fieldset class="form-group">
-              <input type="text" class="form-control" placeholder="What's this article about?" />
-            </fieldset>
-            <fieldset class="form-group">
-              <textarea
-                class="form-control"
-                rows="8"
-                placeholder="Write your article (in markdown)"
-              ></textarea>
-            </fieldset>
-            <fieldset class="form-group">
-              <input type="text" class="form-control" placeholder="Enter tags" />
-              <div class="tag-list">
-                <span class="tag-default tag-pill"> <i class="ion-close-round"></i> tag </span>
-              </div>
-            </fieldset>
-            <button class="btn btn-lg pull-xs-right btn-primary" type="button">
-              Publish Article
-            </button>
+            <div class="form-group">
+              <%= form.text_field :title, class: "form-control form-control-lg" , placeholder: "Article Title" %>
+            </div>
+
+            <div class="form-group">
+              <%= form.text_field :description, class: "form-control" , placeholder: "What's this article about?" %>
+            </div>
+
+            <div class="form-group">
+              <%= form.text_area :body, rows: 8, class: "form-control" , placeholder: "Write your article (in markdown)"
+                %>
+            </div>
+
+            <div class="form-group">
+              <%= form.text_field :tags, class: "form-control" , placeholder: "Enter tags" %>
+            </div>
+
+            <%= form.submit "Publish Article" , class: "btn btn-lg pull-xs-right btn-primary" %>
           </fieldset>
-        </form>
+          <% end %>
+
       </div>
     </div>
   </div>
