編集ページをフォーマット

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -15,11 +15,7 @@
               <input type="text" class="form-control" placeholder="What's this article about?" />
             </fieldset>
             <fieldset class="form-group">
-              <textarea
-                class="form-control"
-                rows="8"
-                placeholder="Write your article (in markdown)"
-              ></textarea>
+              <textarea class="form-control" rows="8" placeholder="Write your article (in markdown)"></textarea>
             </fieldset>
             <fieldset class="form-group">
               <input type="text" class="form-control" placeholder="Enter tags" />
