--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     rel="stylesheet" type="text/css" />
   <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
   <link rel="stylesheet" href="//demo.productionready.io/main.css" />
+  <%= javascript_importmap_tags %>
 </head>
 
 <body>
