ダミー記事コメントアウト

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -48,7 +48,7 @@
           </ul>
         </div>
         <!-- 記事一覧 -->
-        <div class="article-preview">
+        <!-- <div class="article-preview">
           <div class="article-meta">
             <a href="/profile/eric-simons"><img src="http://i.imgur.com/Qr71crq.jpg" /></a>
             <div class="info">
@@ -68,7 +68,7 @@
               <li class="tag-default tag-pill tag-outline">implementations</li>
             </ul>
           </a>
-        </div>
+        </div> -->
         <!-- <div class="article-preview">
           <div class="article-meta">
             <a href="/profile/albert-pai"><img src="http://i.imgur.com/N4VcUeJ.jpg" /></a>
