--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -31,9 +31,10 @@
           <i class="ion-edit"></i> Edit Article
         </button>
         <!-- 記事の削除ボタン -->
-        <button class="btn btn-sm btn-outline-danger">
+        <%= link_to article_path(@article), data: { turbo_method: :delete, confirm: 'Are you sure?' },
+          class: 'btn btn-sm btn-outline-danger' do %>
           <i class="ion-trash-a"></i> Delete Article
-        </button>
+          <% end %>
       </div>
     </div>
   </div>
