--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -27,11 +27,11 @@
           &nbsp; Favorite Post <span class="counter">(29)</span>
         </button>
         <!-- 記事の編集ボタン -->
-        <button class="btn btn-sm btn-outline-secondary">
-          <i class="ion-edit"></i> Edit Article
-        </button>
+        <%= link_to edit_article_path(@article), class: "btn btn-sm btn-outline-secondary" do %>
+        <i class="ion-edit"></i> Edit Article
+        <% end %>
         <!-- 記事の削除ボタン -->
-        <%= link_to article_path(@article), data: { turbo_method: :delete, confirm: 'Are you sure?' },
+        <%= link_to article_path(@article), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' },
           class: 'btn btn-sm btn-outline-danger' do %>
           <i class="ion-trash-a"></i> Delete Article
           <% end %>
