--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,27 @@
 <!-- ユーザーがログインしていない場合 -->
-
-<!-- ログインしている場合 -->
 <nav class="navbar navbar-light">
   <div class="container">
     <a class="navbar-brand" href="/">conduit</a>
     <ul class="nav navbar-nav pull-xs-right">
       <li class="nav-item">
         <!-- Add "active" class when you're on that page" -->
+        <a class="nav-link active" href="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/login">Sign in</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/register">Sign up</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<!-- ログインしている場合 -->
+<!-- <nav class="navbar navbar-light">
+  <div class="container">
+    <a class="navbar-brand" href="/">conduit</a>
+    <ul class="nav navbar-nav pull-xs-right">
+      <li class="nav-item">
         <a class="nav-link active" href="/">Home</a>
       </li>
       <li class="nav-item">
@@ -25,7 +40,7 @@
       </li>
     </ul>
   </div>
-</nav>
+</nav> -->
 <!-- メイン -->
 <div class="home-page">
   <div class="banner">
