index.html.erbの修正

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,9 @@
 <!-- ユーザーがログインしていない場合 -->
-<nav class="navbar navbar-light">
+<!-- <nav class="navbar navbar-light">
   <div class="container">
     <a class="navbar-brand" href="/">conduit</a>
     <ul class="nav navbar-nav pull-xs-right">
       <li class="nav-item">
-        <!-- Add "active" class when you're on that page" -->
         <a class="nav-link active" href="/">Home</a>
       </li>
       <li class="nav-item">
@@ -15,13 +14,14 @@
       </li>
     </ul>
   </div>
-</nav>
+</nav> -->
 <!-- ログインしている場合 -->
-<!-- <nav class="navbar navbar-light">
+<nav class="navbar navbar-light">
   <div class="container">
     <a class="navbar-brand" href="/">conduit</a>
     <ul class="nav navbar-nav pull-xs-right">
       <li class="nav-item">
+        <!-- Add "active" class when you're on that page" -->
         <a class="nav-link active" href="/">Home</a>
       </li>
       <li class="nav-item">
@@ -40,6 +40,7 @@
       </li>
     </ul>
   </div>
+</nav>
 <div class="home-page">
   <div class="banner">
     <div class="container">
