--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -69,7 +69,7 @@
             <div class="article-meta">
               <a href="/profile/eric-simons"><img src="http://i.imgur.com/Qr71crq.jpg" /></a>
               <div class="info">
-                <a href="/profile/eric-simons" class="author">Eric Simons</a>
+                <%= link_to article.user.username, user_path(article.user.username), class: 'author' %>
                 <span class="date">
                   <%= article.created_at.strftime("%B %e, %Y") %>
                 </span>
